# spark-delta-iceberg

./: .gitignore  404.html  README.md  index.html  pyproject.toml  spark-apache-iceberg.ipynb  spark-delta-lake.ipynb
delta/: index.html
docs/: delta.md  iceberg.md
docsite/: mkdocs.yml
docsite/docs/: iceberg.md  index.md
docsite/site/: 404.html  index.html
docsite/site/search/: search_index.json
iceberg/: index.html
notebook/: spark-apache-iceberg.ipynb  spark-delta-lake.ipynb
search/: search_index.json
spark-delta/: Untitled.ipynb  pyproject.toml  spark-delta-lake.ipynb
spark-delta/docsite/: mkdocs.yml
spark-delta/docsite/docs/: index.md
spark-delta/docsite/site/delta/: index.html
spark-delta/spark-warehouse/carro_delta/: .part-00000-805eebfb-7257-4ea4-ba3a-34b1c48f564b-c000.snappy.parquet.crc  .part-00000-8c2b3e2b-2e2e-4721-8e55-5f9fdd6d1231-c000.snappy.parquet.crc  .part-00001-f83e922a-25fc-44e9-a6fd-392547c477ba-c000.snappy.parquet.crc  .part-00002-b1b3710c-3dfd-451d-9962-53ca52ff1fc7-c000.snappy.parquet.crc  part-00000-805eebfb-7257-4ea4-ba3a-34b1c48f564b-c000.snappy.parquet  part-00000-8c2b3e2b-2e2e-4721-8e55-5f9fdd6d1231-c000.snappy.parquet  part-00001-f83e922a-25fc-44e9-a6fd-392547c477ba-c000.snappy.parquet  part-00002-b1b3710c-3dfd-451d-9962-53ca52ff1fc7-c000.snappy.parquet
spark-delta/spark-warehouse/cliente_delta/: .part-00000-6526dac4-dac7-4b23-9045-f43cb5c88767-c000.snappy.parquet.crc  (+7 more)
spark-iceberg/: pyproject.toml  spark-apache-iceberg.ipynb
spark-iceberg/.ipynb_checkpoints/: spark-apache-iceberg-checkpoint.ipynb
(+66 files in other folders)
